@@ -1,3 +1,9 @@
+ags (3.12.7)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* updated README windows build
+	* improved ags_xorg_application_context.c to conditional build sysname of windows
+
 ags (3.12.6)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
